--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "lodash": "^4.17.4",
     "react": "^16.2.0",
+    "react-css-transition-replace": "^3.0.2",
     "react-dom": "^16.2.0",
     "react-scripts": "1.0.17"
   },
